Bug 1860932 - Check for empty line list in the prev-in-flow. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D191872